Fix a handful of dark mode ui bugs

--- a/apps/usdb/src/styles.scss
+++ b/apps/usdb/src/styles.scss
@@ -21,20 +21,3 @@ a {
     justify-content: center;
     align-items: center;
 }
-
-.MuiButton-root.paperButton {
-    color: #000;
-    background-color: #FFF;
-    width: 100%;
-    margin: 2em;
-    padding: 1em;
-}
-
-.MuiButton-root.menuButton {
-    border: 1px solid #000;
-    height: 3em; 
-    padding-top: 1.8em;
-    padding-bottom: 1.8em;
-    border-radius: 1.5em;
-    margin: auto 1em;
-}
